syntax = "proto3";

option go_package = "way2ski-backend/proto";

package main;

service WayService {
  rpc GetLines(Params) returns (Lines);
}

message Params {
  string hometownStation = 1;
  string skiResort = 2;
  bool isHoliday = 3;
}

message OneCandidateInLeg {
  string lineName = 1;
  string departureStation = 2;
  uint32 departureHour = 3;
  uint32 departureMinute = 4;

  string arrivalStation = 5;
  uint32 arrivalHour = 6;
  uint32 arrivalMinute = 7;
}

message CandidatesInOneLeg {
  repeated OneCandidateInLeg candidatesInOneLeg = 1;
}

message AllLegsInOneWay {
  repeated CandidatesInOneLeg allLegsInOneWay = 1;
}

message Lines {
  AllLegsInOneWay allLegsToSki = 1;
  AllLegsInOneWay allLegsHome = 2;
}